data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3415.wast
;; 4. **Br Table with Deep Nesting Interruption**:    - **Description**: Create a nested block that is interrupted by a `br_table` instruction, where a function call follows the `br_table`.    - **Constraint**: Ensure proper control flow to the correct block and validate the function call's type and index after branching.    - **Relation to Mismanagement of Block Nesting**: Tests that the `br_table` accurately transfers control to the correct block, not disrupting the function call or crash.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $deep-nesting-interruption (param i32) (result i32)
      (block 
        (block
          (block
            (block
              (br_table 0 1 2 3 (i32.const 0))
              (call 0)
            )
          )
        )
      )
    )
    (func (param i32) (result i32) (i32.const 42))
  )
  "br_table control flow disruption"
)